[gd_scene load_steps=8 format=3 uid="uid://debki8wei70mw"]

[ext_resource type="Theme" uid="uid://dput70sdrayl" path="res://assets/godot/tres/uiGlobalTheme.tres" id="1_xgyfw"]
[ext_resource type="FontFile" uid="uid://b3f6o2t3fsb05" path="res://assets/external/font/RobotoCondensed-Light.ttf" id="2_ru28i"]
[ext_resource type="Script" path="res://assets/godot/pck/stories/arcOne/cutscenes/intro/choices/uiOEChoice.gd" id="3_1vgwj"]
[ext_resource type="AudioStream" uid="uid://m4ny8ff47g0h" path="res://assets/external/aud/fx/select_008 .ogg" id="4_xinnd"]

[sub_resource type="Animation" id="Animation_f2c4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_twdhm"]
resource_name = "uiMenuExitHovered"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkib"]
_data = {
"RESET": SubResource("Animation_f2c4x"),
"uiMenuExitHovered": SubResource("Animation_twdhm")
}

[node name="uiOpenEyes" type="Button" node_paths=PackedStringArray("uiBtnAnimation", "uiBtnSFX")]
offset_right = 381.0
offset_bottom = 67.0
mouse_filter = 2
theme = ExtResource("1_xgyfw")
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_fonts/font = ExtResource("2_ru28i")
theme_override_font_sizes/font_size = 30
text = "Face it, open your eyes..."
flat = true
script = ExtResource("3_1vgwj")
uiBtnAnimation = NodePath("uiOpenEyesAnimation")
uiBtnSFX = NodePath("uiOpenEyesSFX")

[node name="uiOpenEyesAnimation" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_5bkib")
}
autoplay = "uiMenuStartHighlight"

[node name="uiOpenEyesSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xinnd")
volume_db = -10.0
bus = &"SFX Main"

[connection signal="mouse_entered" from="." to="." method="_whenMouseEnteredButton"]
[connection signal="mouse_exited" from="." to="." method="_whenMouseExitedButton"]
[connection signal="pressed" from="." to="." method="_whenMousePressed"]
